--- a/Goodsprint/index.html
+++ b/Goodsprint/index.html
@@ -401,7 +401,7 @@
                     <!-- footer logo -->
                     <div class="footer-logo">
                         <a href="index.html">
-                            <img src="img/logo-alt.png" alt="logo">
+                            <img src="img/Logo-alt.png" alt="logo">
                         </a>
                     </div>
                     <!-- /footer logo -->
