--- a/Goodsprint/index.html
+++ b/Goodsprint/index.html
@@ -52,7 +52,7 @@
                     <div class="navbar-brand">
                         <a href="index.html">
                             <img class="logo" src="img/Logo.png" alt="logo" style="padding-top: 15px">
-                            <img class="logo-alt" src="img/Logo-alt.png" alt="logo" style="padding-top: 15px">
+                            <img class="logo-alt" src="img/Logo.png" alt="logo" style="padding-top: 15px">
                         </a>
                     </div>
                     <!-- /Logo -->
